@@ -18,6 +18,7 @@
 [add] Settings -> API -> Enable API configuration page
         - when enabled, visit http://ipaddress:port/api to configure API keys from a web browser
         - port is configured in Settings - HTTP Server - Port
+[add] Storing personal api keys in api_keys.json, restore keys from json on settings loss
 [fix] context menu after playback
 [fix] alternative player, do not append headers
 [fix/upd] post play events happen post play
