@@ -1,6 +1,6 @@
 __all__ = ['SearchHistory', 'FavoriteList', 'WatchLaterList', 'FunctionCache', 'AccessManager', 'ViewManager',
            'strip_html_from_text', 'create_path', 'create_uri_path', 'find_best_fit', 'to_unicode', 'to_utf8',
-           'datetime_parser', 'select_stream', 'get_http_server', 'is_httpd_live', 'YouTubeMonitor', 'YouTubePlayer', 'make_dirs']
+           'datetime_parser', 'select_stream', 'get_http_server', 'is_httpd_live', 'YouTubeMonitor', 'YouTubePlayer', 'make_dirs', 'JSONStore']
 
 from . import datetime_parser
 from .methods import *
@@ -13,3 +13,4 @@ from .view_manager import ViewManager
 from .http_server import get_http_server, is_httpd_live
 from .monitor import YouTubeMonitor
 from .player import YouTubePlayer
+from .json_store import JSONStore
